--- a/assets/sass/components/_input.scss
+++ b/assets/sass/components/_input.scss
@@ -47,7 +47,11 @@
         font-size: 14px;
         line-height: 16px;
 
+        div{
+            display: block;
+        }
         .form-label{
+            display: block;
             margin-bottom: 0px;
 
             font-size: 14px;
@@ -85,7 +89,7 @@
 
             color: #FFFFFF;
             background-color: #00ACB4;
-            
+
             & ~ span{
                 font-size: 64px;
                 font-size: 12px;
